--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,7 +6,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: fixed;
     background: @wild-sand;
+    opacity: 0.6;
     padding: 1% 0;
     border-bottom: 2px solid @sea-shell;
 
@@ -24,13 +26,12 @@
         font-weight: bold;
         margin-top: 2.5%;
         margin-left: 9%;
+        .transition(all, 0.5s, ease-in);
         
         @media @phone {
             width: 90%;
             margin: 5% 0 0 5%;
         }
-
-
 
         a {
             text-decoration: none;
@@ -38,8 +39,9 @@
             margin: 0 4%;
 
             @media @phone {
-                margin: 0 3%;
+            margin: 0 3%;
             }
         }
+
     }
 }
